# ISRO-HelpBot

./: .gitignore  MANIFEST.in  README.md  build_index.py  config.py  entrypoints.py  mosdac_crawler.py  pyproject.toml  requirements.txt  setup.py
api/: README.md  main_api.py  query_handler.py
app/: main.py
core/: chat_engine.py
data/clean_text/: data_access.txt  frequently_asked.txt  geospatial_tags.txt  insat_missions.txt  insat_overview.txt  insat_satellites.txt  mosdac_overview.txt  product_catalog.txt  satellite_launches.txt  satellite_services.txt  scientific_missions.txt  weather_payloads.txt
data/graph/: knowledge_graph.pkl
data/mosdac_pages/: page_01.txt  page_02.txt  page_03.txt  page_04.txt  page_05.txt  page_06.txt  page_07.txt  page_08.txt  page_09.txt  page_10.txt  page_11.txt  page_12.txt  page_13.txt  page_14.txt  page_15.txt  page_16.txt  page_17.txt  page_18.txt  page_19.txt  page_20.txt  page_21.txt  page_22.txt  page_23.txt  page_24.txt  page_25.txt  page_26.txt  page_27.txt  page_28.txt  (+2 more)
evaluation/: eval_engine.py
ingestion/: docx_extractor.py  dynamic_scraper.py  html_scraper.py  pdf_extractor.py
intent_classifier/: intent_predictor.py  intent_router.py
isro_helpbot/: cli.py
kg_builder/: build_kg.py  docx_pdf_parser.py  entity_extractor.py  geospatial_extractor.py  relationship_mapper.py  response_generator.py  text_preprocessor.py
model/: embedding_generator.py  faiss_store.index  faiss_store_docs.pkl  kg_reasoner.py  language_model.py  qa_pipeline.py  vector_store.py
tests/: test_intent_classifier.py
ui/: streamlit_app.py
(+5 files in other folders)
